objects/BMCServiceDesk__BMC_IPEndpoint__c.object
<CustomObject>
    <description>BMC_IPEndpoint: CMDB Class stores information about communication endpoints dedicated to running IP.   This class corresponds to the DMTF CIM_IPProtocolEndpoint class.</description>
    <fields>
        <fullName>BMCServiceDesk__AddressType__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Pv4</fullName>
                </value>
                <value>
                    <fullName>IPv6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DNSHostName__c</fullName>
        <label>DNS Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ManagementAddress__c</fullName>
        <label>Management Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrefixLength__c</fullName>
        <label>Prefix Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SubnetMask__c</fullName>
        <label>Subnet Mask</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>IP Endpoint</label>
    <nameField>
        <label>BMC_IPEndpoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Endpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>